feat: New api for bulk update
